Implemented FullyDtoConvertable for GroupPost.java